--- a/app/src/main/res/drawable/radiobtn2color.xml
+++ b/app/src/main/res/drawable/radiobtn2color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:color="#fff"/>
-    <item android:state_checked="true" android:color="#065B4F"/>
-    <item android:color="#065B4F"/>
+    <item android:state_checked="true" android:color="#D10A4E"/>
+    <item android:color="#D10A4E"/>
 
 </selector>
