--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -46,16 +46,26 @@
 
     <Button
         android:id="@+id/bSignup"
-        android:layout_width="184dp"
-        android:layout_height="44dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/signupbutton"
+        android:layout_marginLeft="40sp"
+        android:layout_marginRight="40sp"
         android:padding="10dp"
         android:text="Sign Up "
         android:textAllCaps="false"
         android:textColor="#F3F3F7"
-        android:textSize="18dp" />
+        android:textSize="18dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="12sp"
+        android:background="@mipmap/orimage"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="15sp"/>
+
     <!--
         <ImageView
             android:layout_width="50dp"
@@ -70,7 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="40dp"
         android:drawableLeft="@mipmap/google"
         android:textAlignment="center"
