--- a/app/src/main/res/layout/bodyactivity.xml
+++ b/app/src/main/res/layout/bodyactivity.xml
@@ -45,7 +45,7 @@
             android:textColor="#F6F7F8"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:buttonTint="@drawable/radiobtncolor"/>
+            android:buttonTint="@drawable/radiobtn3color"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
             android:textColor="#F6F7F8"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:buttonTint="@drawable/radiobtncolor"/>
+            android:buttonTint="@drawable/radiobtn3color"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -86,7 +86,7 @@
             android:textColor="#F6F7F8"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:buttonTint="@drawable/radiobtncolor"/>
+            android:buttonTint="@drawable/radiobtn3color"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
