--- a/app/src/main/res/layout/gym_exercisepage_fragment.xml
+++ b/app/src/main/res/layout/gym_exercisepage_fragment.xml
@@ -3,20 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".gymfragment.GymExercisepageFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/gym_exercise_id">
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#050505">
-    </android.support.design.widget.TabLayout>
+        android:layout_height="50dp"
+        app:tabMode="fixed"/>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@android:color/white" />
 
 
 
