--- a/app/src/main/res/layout/gym_homepage_fragment.xml
+++ b/app/src/main/res/layout/gym_homepage_fragment.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/gymHomePage"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/background03">
 
@@ -31,62 +33,196 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="170dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:id="@+id/DailyGoals"
                     android:background="@drawable/dailygoals"
-                    android:text="Daily goals"
-                    android:gravity="top"
-                    android:textColor="#F7F8FA"
-                    android:textSize="20sp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="5dp"
-                    android:padding="15dp"/>
-                <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="170dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:drawableRight="@mipmap/plusicon"
+                        android:gravity="top"
+                        android:padding="15dp"
+                        android:text="Daily Goals"
+                        android:textColor="#F7F8FA"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Steps"
-                    android:gravity="top"
-                    android:textSize="20sp"
-                    android:textColor="#F7F8FA"
                     android:background="@drawable/steps"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="10dp"
-                    android:padding="15dp"/>
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Steps  "
+                        android:gravity="top"
+                        android:textSize="20sp"
+                        android:textColor="#F7F8FA"
+                        android:drawableRight="@mipmap/plusicon"
+                        android:padding="15dp"/>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/StepDisplay"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="7dp"
+                            android:text="0"
+                            android:textColor="#fff"
+                            android:textSize="45dp"
+                            android:textStyle="bold|italic" />
+
+                        <TextView
+                            android:id="@+id/stepsAchieve"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="7dp"
+                            android:text="of 1000"
+                            android:layout_gravity="bottom"
+                            android:textColor="#fff"
+                            android:textSize="20dp"
+                            android:textStyle="bold|italic" />
+                    </LinearLayout>
+
+                </LinearLayout>
     </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
 
-            <TextView
-                android:layout_width="60dp"
-                android:layout_height="170dp"
-                android:layout_weight="1"
-                android:background="@drawable/calories"
-                android:text="Calories"
-                android:textColor="#F7F8FA"
-                android:textSize="20sp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="5dp"
-                android:padding="15dp" />
-            <TextView
-                android:layout_width="60dp"
-                android:layout_height="170dp"
-                android:layout_weight="1"
-                android:text="Water"
-                android:textSize="20sp"
-                android:textColor="#F7F8FA"
-                android:background="@drawable/water"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
-                android:padding="15dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:id="@+id/Calories"
+                    android:background="@drawable/calories"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="15dp"
+                        android:text="Calories"
+                        android:textColor="#F7F8FA"
+                        android:textSize="20sp"
+                        android:drawableRight="@mipmap/plusicon"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/caloriesDisplay"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="7dp"
+                            android:text="0"
+                            android:textColor="#fff"
+                            android:textSize="45dp"
+                            android:textStyle="bold|italic" />
+
+                        <TextView
+                            android:id="@+id/caloriesAchieve"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="7dp"
+                            android:layout_gravity="bottom"
+                            android:text="Kcal of 1000"
+                            android:textColor="#fff"
+                            android:textSize="20dp"
+                            android:textStyle="bold|italic" />
+                    </LinearLayout>
+
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/water"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/water">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Water"
+                        android:textSize="20sp"
+                        android:textColor="#F7F8FA"
+                        android:padding="15dp"
+                        android:drawableRight="@mipmap/plusicon"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+                        <Button
+                            android:id="@+id/waterMinus"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@mipmap/plusicon"
+                            android:layout_weight="5"/>
+                        <TextView
+                            android:id="@+id/waterDisplay"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="7dp"
+                            android:text="00"
+                            android:textColor="#fff"
+                            android:textSize="40dp"
+                            android:layout_weight="0"
+                            android:textStyle="bold|italic" />
+
+                        <TextView
+                            android:id="@+id/waterAchieve"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="7dp"
+                            android:layout_weight="2.5"
+                            android:layout_gravity="bottom"
+                            android:text="Glass of 20"
+                            android:textColor="#fff"
+                            android:textSize="15dp"
+                            android:textStyle="bold|italic" />
+                        <Button
+                            android:id="@+id/waterPlus"
+                            android:layout_weight="5"
+                            android:background="@mipmap/plusicon"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+
+                 </LinearLayout>
 
         </LinearLayout>
             <LinearLayout
@@ -120,139 +256,10 @@
                     android:padding="15dp"/>
 
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="170dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/exercises"
-                    android:text="Exercises"
-                    android:textColor="#F7F8FA"
-                    android:textSize="20sp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="5dp"
-                    android:padding="15dp"/>
-                <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="170dp"
-                    android:layout_weight="1"
-                    android:text="Activity"
-                    android:textSize="20sp"
-                    android:textColor="#F7F8FA"
-                    android:background="@drawable/activity"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="10dp"
-                    android:padding="15dp"/>
-
-            </LinearLayout>
         </LinearLayout>
 
     </ScrollView>
 
-    <!--<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/llSteps">
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/llCalories">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Calories"
-            android:textSize="20sp"
-            android:textColor="#F7F8FA"
-            android:padding="20dp"
-            android:background="#3651E9"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/llWater">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Water"
-            android:textSize="20sp"
-            android:textColor="#F7F8FA"
-            android:padding="20dp"
-            android:background="#F84D16"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/llSleep">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sleep"
-            android:textSize="20sp"
-            android:textColor="#F7F8FA"
-            android:padding="20dp"
-            android:background="#A921C0"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/llFood">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Food"
-            android:textSize="20sp"
-            android:textColor="#F7F8FA"
-            android:padding="20dp"
-            android:background="#E48308"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/llExercises">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Exercises"
-            android:textSize="20sp"
-            android:textColor="#F7F8FA"
-            android:padding="20dp"
-            android:background="#F35289"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/llActivity">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Activity"
-            android:textSize="20sp"
-            android:textColor="#F7F8FA"
-            android:padding="20dp"
-            android:background="#E63A03"/>
-
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Making fitness a priority will energize you, make you look and feel better, and help diffuse stress."
-        android:textColor="#D3094E"
-        android:textSize="16sp"
-        android:padding="5sp"/>
--->
 </LinearLayout>
