--- a/app/src/main/res/layout/mefragment.xml
+++ b/app/src/main/res/layout/mefragment.xml
@@ -6,17 +6,153 @@
     tools:context=".fragment.MeFragment"
     android:orientation="vertical">
 
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
-        android:layout_width="411dp"
-        android:layout_height="190dp"
+        android:layout_width="421dp"
+        android:layout_height="286dp"
         android:layout_gravity="center"
-        android:background="#F72E73"
-        android:src="@mipmap/profilepic"
-        android:textAlignment="center" />
+        android:background="@mipmap/profilebackground"
+        android:src="@mipmap/profilepic" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="40dp">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Name :"
+        android:textSize="16dp"
+        android:padding="10dp"
+        android:textColor="#000"
+        android:textStyle="bold"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
+            android:padding="10dp"
+            android:text="Example"
+            android:backgroundTint="#fff"/>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Gender :"
+            android:textSize="16dp"
+            android:padding="10dp"
+            android:textColor="#000"
+            android:textStyle="bold"/>
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
+            android:padding="10dp"
+            android:entries="@array/Gender"
+            android:backgroundTint="@color/colorAccent"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Email :"
+            android:textSize="16dp"
+            android:padding="10dp"
+            android:textColor="#000"
+            android:textStyle="bold"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
+            android:padding="10dp"
+            android:text="Example"
+            android:backgroundTint="#fff"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Height :"
+            android:textSize="16dp"
+            android:padding="10dp"
+            android:textColor="#000"
+            android:textStyle="bold"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
+            android:padding="10dp"
+            android:text="Example"
+            android:backgroundTint="#fff"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Weight :"
+            android:textSize="16dp"
+            android:padding="10dp"
+            android:textColor="#000"
+            android:textStyle="bold"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
+            android:padding="10dp"
+            android:text="Example"
+            android:backgroundTint="#fff"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Password :"
+            android:textSize="16dp"
+            android:padding="10dp"
+            android:textColor="#000"
+            android:textStyle="bold"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.4"
+            android:padding="10dp"
+            android:text="Example"
+            android:backgroundTint="#fff"/>
+    </LinearLayout>
 
 
 </LinearLayout>
