Health Record UI Design

--- a/app/src/main/res/layout/gym_homepage_fragment.xml
+++ b/app/src/main/res/layout/gym_homepage_fragment.xml
@@ -228,38 +228,76 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
 
-                <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="170dp"
+                <LinearLayout
+                    android:id="@+id/sleep"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/sleep"
-                    android:text="Sleep"
-                    android:textColor="#F7F8FA"
-                    android:textSize="20sp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="5dp"
-                    android:padding="15dp"/>
-                <TextView
-                    android:layout_width="60dp"
-                    android:layout_height="170dp"
+                    android:orientation="vertical"
+                    android:background="@drawable/sleep">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Sleep"
+                        android:textColor="#F7F8FA"
+                        android:textSize="20sp"
+                        android:padding="15dp"
+                        android:drawableRight="@mipmap/plusicon"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="20dp"
+                        android:gravity="center">
+                        <TextView
+                            android:id="@+id/sleepDisplay"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="7dp"
+                            android:text="0"
+                            android:textColor="#fff"
+                            android:textSize="45dp"
+                            android:textStyle="bold|italic" />
+
+                        <TextView
+                            android:id="@+id/sleepAchieve"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="7dp"
+                            android:layout_gravity="bottom"
+                            android:text="Hrs of 1000"
+                            android:textColor="#fff"
+                            android:textSize="20dp"
+                            android:textStyle="bold|italic" />
+
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Food"
-                    android:textSize="20sp"
-                    android:textColor="#F7F8FA"
                     android:background="@drawable/food"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginRight="10dp"
-                    android:padding="15dp"/>
+                    android:layout_marginRight="10dp">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Food"
+                        android:textSize="20sp"
+                        android:textColor="#F7F8FA"
+                        android:drawableRight="@mipmap/plusicon"
+                        android:padding="15dp"/>
 
+                </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
-
     </ScrollView>
-
-
 </LinearLayout>
