--- a/app/src/main/res/layout/mefragment.xml
+++ b/app/src/main/res/layout/mefragment.xml
@@ -2,18 +2,64 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".fragment.MeFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/whiteText">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
-        android:layout_width="421dp"
-        android:layout_height="286dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:layout_gravity="center"
+        android:maxHeight="200dp"
         android:background="@mipmap/profilebackground"
         android:src="@mipmap/profilepic" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="20sp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="3 Days"
+                android:textAlignment="center"
+                android:textColor="@color/Pink"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Cycle Length"
+                android:textAlignment="center"
+                android:textColor="@color/Black"
+                android:textStyle="bold|italic"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="32 Days"
+                android:textColor="@color/Blue"
+                android:textAlignment="center"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="Period Length"
+                android:textColor="@color/Black"/>
+        </LinearLayout>
+    </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -24,8 +70,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="40dp">
+                android:orientation="horizontal">
 
             <TextView
                 android:layout_width="match_parent"
@@ -168,22 +213,30 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:text="Password :"
                     android:textSize="16dp"
                     android:padding="10dp"
                     android:textColor="#000"
                     android:textStyle="bold"/>
                 <EditText
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.4"
+                    android:layout_weight="20"
                     android:padding="10dp"
                     android:text="Example"
                     android:backgroundTint="#fff"
                     android:inputType="textPassword"/>
+
+                <ToggleButton
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.1"
+                    android:textOn=""
+                    android:textOff=""
+                    android:background="@drawable/showpassword"/>
             </LinearLayout>
             <Button
                 android:id="@+id/save"
@@ -196,6 +249,7 @@
                 android:layout_marginBottom="10dp"
                 android:textColor="@color/whiteText"
                 android:textAllCaps="false"/>
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
