--- a/app/src/main/res/layout/perioddashboard.xml
+++ b/app/src/main/res/layout/perioddashboard.xml
@@ -6,21 +6,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="bottom"
-    tools:context=".GymTrainer_Dashboard"
+    tools:context=".PeriodDashboard"
     android:background="@mipmap/background">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/gymNavigation"
+          android:id="@+id/periodNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorAccent"
+        android:background="@color/Pink"
         app:itemIconTint="@android:color/white"
         app:itemTextColor="@android:color/white"
-        app:menu="@menu/gymnavbar"
-
+        app:menu="@menu/periodnavbar"
         android:foreground="?attr/selectableItemBackground">
-
 
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
@@ -30,5 +28,4 @@
         android:layout_height="match_parent">
     </FrameLayout>
 
-    </RelativeLayout>
-
+</RelativeLayout>
