--- a/app/src/main/res/layout/personal_info.xml
+++ b/app/src/main/res/layout/personal_info.xml
@@ -9,6 +9,16 @@
     android:padding="16dp"
     android:background="@mipmap/background">
 
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
         android:layout_width="216dp"
@@ -131,21 +141,25 @@
         android:singleLine="true"
         android:inputType="textPassword"
         android:imeOptions="actionDone"/>
-
-    <Button
-        android:id="@+id/bNext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:background="@drawable/signupbutton"
-        android:text="Next"
-        android:textAllCaps="false"
-        android:textColor="#fff"
-        android:textSize="20sp" />
-
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent">
+            <Button
+                android:id="@+id/bNext"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_alignParentBottom="true"
+                android:layout_centerInParent="true"
+                android:background="@drawable/signupbutton"
+                android:text="Next"
+                android:textAllCaps="false"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:textColor="#fff"
+                android:textSize="20sp" />
+        </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
 
