--- a/app/src/main/res/layout/selected__field.xml
+++ b/app/src/main/res/layout/selected__field.xml
@@ -4,177 +4,197 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Selected_Field"
+    android:background="@mipmap/background02"
     android:orientation="vertical"
-    android:background="@mipmap/background02">
-
-
-    <TextView
+    tools:context=".Selected_Field">
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="How would you like to use this app for ?"
-        android:textSize="25sp"
-        android:textColor="#F7F9FC"
-        android:padding="16dp"
-        android:textAlignment="center"
-        android:layout_marginBottom="40dp"
-        android:layout_marginTop="40dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_marginTop="40sp"
-        android:background="@mipmap/whitebackground"
-        android:gravity="center"
-        android:text="Please select your app field"
-        android:textColor="#065B4F"
-        android:textSize="20sp"
-        android:textStyle="bold|italic" />
-
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:background="@mipmap/whitebackground"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:buttonTint="@drawable/radiobtncolor"
-            android:text="Gym Trainer"
-            android:textColor="#065B4F"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:buttonTint="@drawable/radiobtncolor"
-            android:text="Period Tracker"
-            android:textColor="#065B4F"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-    </RadioGroup>
-
-
-    <TextView
-        android:layout_width="230dp"
-        android:layout_height="45dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="20dp"
-        android:background="@mipmap/whitebackground"
-        android:padding="10dp"
-        android:text="   Gym Trainer       "
-        android:textAlignment="center"
-        android:textColor="#065B4F"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center">
-
-        <RadioButton
-            android:layout_width="231dp"
-            android:layout_height="35dp"
-            android:background="@mipmap/whitebackground"
-            android:buttonTint="@drawable/radiobtncolor"
-            android:padding="5dp"
-            android:text="  Stay Fit "
-            android:textColor="#065B4F"
-            android:textSize="20sp"/>
-
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:background="@mipmap/whitebackground"
-            android:buttonTint="@drawable/radiobtncolor"
-            android:text="  Weight Loss"
-            android:textColor="#065B4F"
-            android:padding="5dp"
-            android:textSize="20sp" />
-
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:background="@mipmap/whitebackground"
-            android:buttonTint="@drawable/radiobtncolor"
-            android:padding="5dp"
-            android:text="  Weight Gain "
-            android:textColor="#065B4F"
-            android:textSize="20sp" />
-    </RadioGroup>
-
-    <TextView
-        android:id="@+id/switch2Btn"
-        android:layout_width="233dp"
-        android:layout_height="45dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:background="@mipmap/whitebackground"
-        android:padding="5dp"
-        android:text="   Period Tracker     "
-        android:textAlignment="center"
-        android:textColor="#D10A4E"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
-
-
-    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center">
-
-        <RadioButton
-            android:layout_width="233dp"
-            android:layout_height="38dp"
-            android:background="@mipmap/whitebackground"
-            android:buttonTint="@drawable/radiobtn2color"
-            android:text="  Trying to Conceive "
-            android:textColor="#D10A4E"
-            android:textSize="20sp" />
-
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:background="@mipmap/whitebackground"
-            android:buttonTint="@drawable/radiobtn2color"
-            android:text="  Regular Tracker"
-            android:textColor="#D10A4E"
-            android:textSize="20sp" />
-    </RadioGroup>
-
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/BtnGym"
-            android:layout_width="120dp"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="gym trainer"
-            android:textAllCaps="false"
-            android:layout_marginLeft="70dp"/>
+            android:layout_marginTop="40dp"
+            android:padding="16dp"
+            android:text="How would you like to use this app for ?"
+            android:textAlignment="center"
+            android:textColor="#F7F9FC"
+            android:textSize="25sp" />
 
-        <Button
-            android:id="@+id/BtnPeriod"
-            android:layout_width="120dp"
+        <TextView
+            android:id="@+id/tvselectField"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginTop="80sp"
+            android:background="@mipmap/whitebackground"
+            android:gravity="center"
+            android:text="Please select your app field"
+            android:textColor="#065B4F"
+            android:textSize="20sp"
+            android:textStyle="bold|italic" />
+
+        <RadioGroup
+            android:id="@+id/RGymPeriod"
+            android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:background="@mipmap/whitebackground"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rbtngymTranier"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:buttonTint="@drawable/radiobtncolor"
+                android:text="Gym Trainer"
+                android:textColor="#065B4F"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <RadioButton
+                android:id="@+id/rbtnperiodTracker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:buttonTint="@drawable/radiobtncolor"
+                android:text="Period Tracker"
+                android:textColor="#065B4F"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </RadioGroup>
+
+        <LinearLayout
+            android:id="@+id/llGymTraner"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Period tracker"
-            android:textAllCaps="false"
-            android:layout_marginLeft="50dp"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="230dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="20dp"
+                android:background="@mipmap/whitebackground"
+                android:padding="10dp"
+                android:text="   Gym Trainer       "
+                android:textAlignment="center"
+                android:textColor="#065B4F"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <RadioButton
+                    android:layout_width="231dp"
+                    android:layout_height="35dp"
+                    android:background="@mipmap/whitebackground"
+                    android:buttonTint="@drawable/radiobtncolor"
+                    android:padding="5dp"
+                    android:text="  Stay Fit "
+                    android:textColor="#065B4F"
+                    android:textSize="20sp" />
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="37dp"
+                    android:background="@mipmap/whitebackground"
+                    android:buttonTint="@drawable/radiobtncolor"
+                    android:padding="5dp"
+                    android:text="  Weight Loss"
+                    android:textColor="#065B4F"
+                    android:textSize="20sp" />
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="37dp"
+                    android:background="@mipmap/whitebackground"
+                    android:buttonTint="@drawable/radiobtncolor"
+                    android:padding="5dp"
+                    android:text="  Weight Gain "
+                    android:textColor="#065B4F"
+                    android:textSize="20sp" />
+            </RadioGroup>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llPeriodTracker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/switch2Btn"
+                android:layout_width="233dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:background="@mipmap/whitebackground"
+                android:padding="5dp"
+                android:text="   Period Tracker     "
+                android:textAlignment="center"
+                android:textColor="#D10A4E"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <RadioButton
+                    android:layout_width="233dp"
+                    android:layout_height="38dp"
+                    android:background="@mipmap/whitebackground"
+                    android:buttonTint="@drawable/radiobtn2color"
+                    android:text="  Trying to Conceive "
+                    android:textColor="#D10A4E"
+                    android:textSize="20sp" />
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="37dp"
+                    android:background="@mipmap/whitebackground"
+                    android:buttonTint="@drawable/radiobtn2color"
+                    android:text="  Regular Tracker"
+                    android:textColor="#D10A4E"
+                    android:textSize="20sp" />
+            </RadioGroup>
+        </LinearLayout>
     </LinearLayout>
+    </ScrollView>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <Button
+                android:id="@+id/bSelectedFiledNext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginBottom="10dp"
+
+                android:background="@drawable/signupbutton"
+                android:padding="10dp"
+                android:text="Next"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textColor="#FDFEFF"
+                android:textSize="20sp" />
+        </RelativeLayout>
 
 
 </LinearLayout>
