--- a/app/src/main/res/layout/welcome_screen.xml
+++ b/app/src/main/res/layout/welcome_screen.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     tools:context=".Welcome_screenActivity"
     android:orientation="vertical"
-    android:background="@mipmap/splashscreenwithlogo">
+    android:background="@mipmap/background">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         android:background="@mipmap/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        />
 
 
-</LinearLayout>
+</RelativeLayout>
 
