--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,12 @@
 <resources>
     <color name="colorPrimary">#000</color>
     <color name="colorPrimaryDark">#000</color>
-    <color name="colorAccent">#065B4F"</color>
-    <color name="whiteText">"#FDFEFF"</color>
+    <color name="colorAccent">#065B4F</color>
+    <color name="whiteText">#FDFEFF</color>
+    <color name="Black">#000000</color>
+    <color name="Blue">#2C82DA</color>
+    <color name="Pink">#D82662</color>
+    <color name="lightPink">#F1C8D7</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
